components/CategorySKU/CategorySKU.module.css
.sku img {
  width: 100%;
  height: auto;
  border-radius: 8px;
}

.sku .content {
  padding-top: 2em;
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1em;
}

.sku .content div {
  display: flex;
  flex-direction: column;
  gap: 0.25em;
}

.sku .content div span {
  color: var(--orange);
  font-size: 14px;
  letter-spacing: 10px;
  width: 100%;
  text-align: center;
}

.sku .content div h2 {
  font-weight: 700;
  font-size: 28px;
  letter-spacing: 1px;
  text-align: center;
}

.sku .content p {
  color: var(--very-dark-grey);
  font-size: 15px;
  line-height: 25px;
  text-align: center;
}

@media (min-width: 1024px) {
  .sku {
    display: flex;
  }

  .sku.reversed {
    flex-direction: row-reverse;
  }

  .sku .content,
  .sku img {
    flex: 1 0 50%;
  }
  .sku .content {
    align-items: flex-start;
  }

  .sku .content div span {
    text-align: left;
  }

  .sku .content div h2 {
    text-align: left;
  }

  .sku .content p {
    max-width: 400px;
    text-align: left;
  }

  .sku .content {
    padding-left: 4em;
  }

  .sku.reversed .content {
    padding-left: 0;
  }
}

